--- a/WistGame/WebWist/Properties/Resources.resx
+++ b/WistGame/WebWist/Properties/Resources.resx
@@ -119,9 +119,6 @@
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="GameIndex" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>ressources\gameindex.html;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
-  </data>
-  <data name="WistGameIndex" xml:space="preserve">
-    <value />
+    <value>..\resources\gameindex.html;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
 </root>
