Added script insertion into the index page.

--- a/WistGame/WebWist/Properties/Resources.resx
+++ b/WistGame/WebWist/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="GameIndex" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\gameindex.html;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="Wist_generated" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\wist_generated.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
 </root>
